# port-killer

./: Cargo.toml  Makefile  README.md  install
.github/workflows/: ci.yml
examples/: waybar-port-killer.jsonc
gnome-extension/port-killer@local/: extension.js  metadata.json
scripts/: install-ubuntu-deps.sh  install.sh
src/: display.rs  doctor.rs  filter.rs  group.rs  gui.rs  icon.rs  kill.rs  listener.rs  main.rs  menu.rs  proc.rs  project.rs  setup.rs  setup_gnome.rs  tui.rs
